# minislide

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FetchDependency.cmake  FindEtl.cmake  FindFreeRTOS.cmake  FindRpPicoSDK.cmake  fetch_dependency.cmake  host_toolchain.cmake
cmake/modules/: FindEtl.cmake  FindFreeRTOS.cmake  FindRpPicoSDK.cmake
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/app/common/: CMakeLists.txt  alternatives.hpp  bind_to.hpp  inplace_function.hpp  prohibit_copy_move.hpp  scope_guard.hpp
src/app/led/: CMakeLists.txt  led.hpp  led_receiver.hpp  led_sender.hpp
src/app/logger/: CMakeLists.txt  logger.hpp
src/app/service/: CMakeLists.txt  event_loop.cpp  event_loop.hpp  message.hpp  service.hpp  signal.hpp  state.hpp
src/bsp/: CMakeLists.txt  bsp.hpp  getchar.hpp  status_led.hpp
src/bsp/host/: bsp.cpp  getchar.cpp  status_led.cpp
src/bsp/pico/: bsp.cpp  getchar.cpp  status_led.cpp
src/firmware/: CMakeLists.txt  firmware.cpp  firmware.hpp
src/firmware/common/: alternatives.hpp  prohibit_copy_move.hpp  recursive_lambda.hpp  singleton.hpp  std_helpers.hpp
src/firmware/led/: CMakeLists.txt  led_receiver.hpp  led_sender.hpp
src/firmware/logger/: logger.hpp
src/firmware/service/: event_loop.hpp  message.hpp  service.hpp  signal.hpp  state.hpp
src/firmware/shell/: CMakeLists.txt  command.hpp  shell.cpp  shell.hpp
src/freertos/: CMakeLists.txt  FreeRTOSConfig.h  assert.hpp  mutex.hpp  priority.hpp
src/hal/: CMakeLists.txt
src/hal/hal/: gpio.hpp  hal.hpp  status_led.hpp
src/hal/host/: gpio.cpp
src/hal/pico/: gpio.cpp  hal.cpp  status_led.cpp
src/platform/: CMakeLists.txt  platform.hpp  status_led.hpp
src/platform/host/: platform.cpp  status_led.cpp  toolchain.cmake
src/platform/pico/: platform.cpp  status_led.cpp
src/startup/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
src/system/: CMakeLists.txt
src/system/common/: CMakeLists.txt  inplace_function.hpp  scope_guard.hpp  singleton.hpp
src/system/logger/: logger.hpp  logger_macros.hpp
src/system/service/: service.hpp
